# babylon-native-ts-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package-lock.json  package.json  tsconfig.json  webpack.build.config.js
Dependencies/: CMakeLists.txt
Typescript/: CMakeLists.txt  package-lock.json  package.json  tsconfig.json  webpack.build.config.js
Typescript/src/: index.ts
scripts/: index.ts
